--- a/configs/john-smith-lingpipe.yaml
+++ b/configs/john-smith-lingpipe.yaml
@@ -16,7 +16,7 @@ kba.pipeline:
   ## tmp_dir, some extractors and loaders require this dir to be in
   ## the same file system as their output.  This is also where the
   ## batch_transforms operate.
-  tmp_dir: /tmp
+  tmp_dir: tmp
 
   ## generator of StreamItems
   extractor: john_smith
@@ -29,7 +29,7 @@ kba.pipeline:
 
   loaders: [to_local_chunks]
 
-  to_local_storage:
+  to_local_chunks:
     #output_type: inplace
     output_type: otherdir
     output_path: data/john-smith/
@@ -37,3 +37,11 @@ kba.pipeline:
 
   lingpipe:
     pipeline_root: .
+    ## convert doc-level labels into token-level labels by requiring
+    ## particular substrings appear in the strings of a coref chain
+    align_labels_by: names_in_chains
+    aligner_data:
+      ## token substring to require in the names of a coref chains
+      names: [john, smith]
+      ## identifier of annotator to find in the doc-level Ratings
+      annotator_id: bagga-and-baldwin
