--- a/configs/john-smith-lingpipe.yaml
+++ b/configs/john-smith-lingpipe.yaml
@@ -36,7 +36,7 @@ kba.pipeline:
     output_name: john-smith-tagged-by-lingpipe
 
   lingpipe:
-    pipeline_root: .
+    pipeline_root: ../third/
     ## convert doc-level labels into token-level labels by requiring
     ## particular substrings appear in the strings of a coref chain
     align_labels_by: names_in_chains
