Creating the idea of a "task queue" as the initial stage that generates strings that an "extractor" can use to obtain an input file to feed the pipeline of transforms.
The simplest task_queue is 'stdin', which replicates the previous
functionality of taking file paths over sys.stdin The existing tests
pass using this new implementation.

The other task_queue currently implemented but with only unit tests,
no end-to-end tests, is ZookeeperTaskQueue, which lets many jobs pull
from the same queue of tasks.

--- a/configs/john-smith-lingpipe-from-chunk.yaml
+++ b/configs/john-smith-lingpipe-from-chunk.yaml
@@ -18,6 +18,12 @@ kba.pipeline:
   ## batch_transforms operate.
   tmp_dir: tmp
 
+  ## task_queue specifies the strings that are passed to an extractor
+  ## to obtain a Chunk.  The strings might be paths in a file system
+  ## or some other source of data.  The task_queue might simply be
+  ## stdin, or it might be a more sophisticated shared queue.
+  task_queue: stdin
+
   ## generator of StreamItems
   extractor: from_local_chunks
 
@@ -35,7 +41,7 @@ kba.pipeline:
     #output_type: inplace
     output_type: otherdir
     output_path: data/john-smith/
-    output_name: john-smith-tagged-by-lingpipe-test
+    output_name: "john-smith-tagged-by-lingpipe-test-%(first)s"
 
   lingpipe:
     pipeline_root: ../third/
