--- a/configs/john-smith-lingpipe-from-chunk.yaml
+++ b/configs/john-smith-lingpipe-from-chunk.yaml
@@ -2,6 +2,10 @@
 ## operating lingpipe
 
 kba.pipeline:
+  ## root path for all things that are called *_path in this file and
+  ## are not an absolute path, i.e. start with '/'
+  root_path: 
+
   ## pipeline expects strings over stdin, which are typically paths to
   ## streamcorpus.Chunk files.  They can also be some other kind of
   ## opaque byte strings delimited by newlines that your particular
@@ -11,12 +15,12 @@ kba.pipeline:
   embedded_logs: true
 
   ## the main pipeline log_dir can trigger similar log chunk
-  log_dir: data/john-smith/
+  log_dir_path: data/john-smith/
 
-  ## tmp_dir, some extractors and loaders require this dir to be in
+  ## tmp_dir_path, some extractors and loaders require this dir to be in
   ## the same file system as their output.  This is also where the
   ## batch_transforms operate.
-  tmp_dir: tmp
+  tmp_dir_path: tmp
 
   ## task_queue specifies the strings that are passed to an extractor
   ## to obtain a Chunk.  The strings might be paths in a file system
@@ -46,7 +50,7 @@ kba.pipeline:
     output_name: "john-smith-tagged-by-lingpipe-test-%(first)s"
 
   lingpipe:
-    pipeline_root: ../third/
+    pipeline_root_path: ../third/
     cleanup_tmp_files: false
     ## convert doc-level labels into token-level labels by requiring
     ## particular substrings appear in the strings of a coref chain
