--- a/configs/john-smith.yaml
+++ b/configs/john-smith.yaml
@@ -14,6 +14,8 @@ kba.pipeline:
   ## put logs inside each chunk file
   embedded_logs: true
 
+  log_level: DEBUG
+
   ## the main pipeline log_dir_path can trigger similar log chunk
   log_dir_path: data/john-smith/
 
