major refactoring of Pipeline to allow partial checkpointing by splitting large chunks into smaller chunks.
Changed the API for extractors to just return one chunk, instead of iterating
over many chunks -- which only the s3 date_hour extractor was doing anyway.

Using the new API on task_queue that allows checkpointing via partial_commit

Tests pass... need a few more tests.

--- a/configs/john-smith-lingpipe-from-chunk.yaml
+++ b/configs/john-smith-lingpipe-from-chunk.yaml
@@ -16,7 +16,9 @@ kba.pipeline:
 
   log_level: DEBUG
 
-  ## the main pipeline log_dir can trigger similar log chunk
+  output_chunk_max_count: 500
+
+  ## the main pipeline log_dir_path can trigger similar log chunk
   log_dir_path: data/john-smith/
 
   ## tmp_dir_path, some extractors and loaders require this dir to be in
@@ -29,7 +31,6 @@ kba.pipeline:
   ## or some other source of data.  The task_queue might simply be
   ## stdin, or it might be a more sophisticated shared queue.
   task_queue: stdin
-  stdin:
 
   ## generator of StreamItems
   extractor: from_local_chunks
