switching dedup to use doc_id instead of stream_id, because we want to remove docs that have the same URL and near-identical content, timestamp is less important.

--- a/src/kba/pipeline/test_dedup_chunk_counts.yaml
+++ b/src/kba/pipeline/test_dedup_chunk_counts.yaml
@@ -53,7 +53,7 @@ kba.pipeline:
     content_form: clean_visible
 
     ## set this to false for N^2 comparison within each chunk
-    require_same_stream_id: false
+    require_same_doc_id: false
 
     ## must be greater than or equal to this
     exactness_nilsimsa_threshold: 128
@@ -62,7 +62,7 @@ kba.pipeline:
     ## higher than exactness_nilsimsa_threshold with another doc
     min_doc_length: 500
 
-    ## two docs with same stream_id that pass the
+    ## two docs with same doc_id that pass the
     ## exactness_nilsimsa_threshold are still not rejected if the
     ## length of content difference is longer than this:
     max_doc_length_difference: 100
