--- a/src/kba/pipeline/test_dedup_chunk_counts.yaml
+++ b/src/kba/pipeline/test_dedup_chunk_counts.yaml
@@ -55,17 +55,20 @@ kba.pipeline:
     ## set this to false for N^2 comparison within each chunk
     require_same_doc_id: false
 
+    use_nilsimsa: false
+
     ## must be greater than or equal to this
     exactness_nilsimsa_threshold: 128
 
     ## docs shorter than this are not rejected even if they have
     ## higher than exactness_nilsimsa_threshold with another doc
-    min_doc_length: 500
+    min_clean_length: 500
 
     ## two docs with same doc_id that pass the
     ## exactness_nilsimsa_threshold are still not rejected if the
     ## length of content difference is longer than this:
-    max_doc_length_difference: 100
+    max_clean_length_difference: 100
+    max_raw_length_difference: 100
 
     log_nilsimsa_threshold: 100
     log_dir_path: /tmp/foo
