improving the logic and error handling in deduplication so that it fails less often and is more careful with short documents.
The main issue was simply that when there was no clean_visible, it
would sometimes try to take len(None)

--- a/src/kba/pipeline/test_dedup_chunk_counts.yaml
+++ b/src/kba/pipeline/test_dedup_chunk_counts.yaml
@@ -64,11 +64,12 @@ kba.pipeline:
     ## higher than exactness_nilsimsa_threshold with another doc
     min_clean_length: 500
 
-    ## two docs with same doc_id that pass the
-    ## exactness_nilsimsa_threshold are still not rejected if the
-    ## length of content difference is longer than this:
-    max_clean_length_difference: 100
-    max_raw_length_difference: 100
+    ## docs with same doc_id that pass exactness_nilsimsa_threshold
+    ## are KEPT if the two docs have lengths that differ by more than
+    ## this fraction (relative to the longer of the two, measured in
+    ## thousandths):
+    min_len_sim_thousandths_clean: 850
+    min_len_sim_thousandths_raw:   850
 
     log_nilsimsa_threshold: 100
     log_dir_path: /tmp/foo
