capturing male/female pronoun detection in lingpipe and putting it into 0_3_0 structs

--- a/configs/kba-streamcorpus-2013-v0_3_0-clean_visible.yaml
+++ b/configs/kba-streamcorpus-2013-v0_3_0-clean_visible.yaml
@@ -31,6 +31,7 @@ kba.pipeline:
   extractor: from_s3_chunks
 
   incremental_transforms: [
+    upgrade_streamcorpus_v0_3_0,
     language, 
     guess_media_type, 
     clean_html, 
