making pipeline respect v0_3_0 and check for in a couple places; This includes making the lingpipe stage generate correct pronominal tags, by assigning MentionType.PRO and also EntityType.PER

--- a/configs/john-smith-lingpipe-from-chunk.yaml
+++ b/configs/john-smith-lingpipe-from-chunk.yaml
@@ -43,6 +43,7 @@ kba.pipeline:
 
   from_local_chunks:
     max_retries: 30
+    streamcorpus_version: v0_3_0
 
   to_local_chunks:
     #output_type: inplace
