replacing the aligner_data["names"] argument for align_by_name with a more generalized use of Rating.mentions and two rule-based coref-chain selectors for applying labels.  This works for john-smith and Lingpipe.  Not yet working correctly for serif.

--- a/configs/john-smith-lingpipe-from-chunk.yaml
+++ b/configs/john-smith-lingpipe-from-chunk.yaml
@@ -58,11 +58,8 @@ kba.pipeline:
     offset_debugging: false
     cleanup_tmp_files: false
 
-    ## convert doc-level labels into token-level labels by requiring
-    ## particular substrings appear in the strings of a coref chain
     align_labels_by: names_in_chains
     aligner_data:
-      ## token substring to require in the names of a coref chains
-      names: [john, smith]
+      chain_selector: ALL
       ## identifier of annotator to find in the doc-level Ratings
       annotator_id: bagga-and-baldwin
