--- a/src/streamcorpus_pipeline/test_post_batch_incremental.yaml
+++ b/src/streamcorpus_pipeline/test_post_batch_incremental.yaml
@@ -1,9 +1,12 @@
 ## YAML kba.pipeline config for testing dedup
 
-streamcorpus.pipeline:
+kba.pipeline:
   ## root path for all things that are called *_path in this file and
   ## are not an absolute path, i.e. start with '/'
   root_path: 
+
+  ## thrift version of the streamitems
+  streamcorpus_version: v0_2_0
 
   ## put logs inside each chunk file
   embedded_logs: false
@@ -34,14 +37,16 @@ streamcorpus.pipeline:
   ## hyperlink_labels must run after clean_html and before
   ## clean_visible in order for the newlines that it inserted to get
   ## into the clean_visible that lingpipe will operate on.
-  incremental_transforms: [dedup]
+  incremental_transforms: [upgrade_streamcorpus_v0_3_0]
   batch_transforms: []
+  post_batch_incremental_transforms: [clean_visible]
 
   ## to_local_chunks must be last, because *moves* the tmp file away
   loaders: [to_local_chunks]
 
   from_local_chunks:
-    max_retries: 30
+    max_retries: 1
+    streamcorpus_version: v0_2_0
 
   to_local_chunks:
     output_type: otherdir
@@ -73,3 +78,8 @@ streamcorpus.pipeline:
 
     log_nilsimsa_threshold: 100
     log_dir_path: /tmp/foo
+
+  align_serif:
+    aligner_data:
+      annotator_id: author
+      tagger_id: serif 
