streamcorpus.pipeline --> streamcorpus_pipeline everywhere

--- a/configs/defaults.yaml
+++ b/configs/defaults.yaml
@@ -1,7 +1,7 @@
 # empty defaults!
 # TODO: write some reasonable defaults
 
-streamcorpus.pipeline:
+streamcorpus_pipeline:
   placeholder: value
 
   incremental_transforms: []
