--- a/src/tests/streamcorpus_pipeline/test_post_batch_incremental.yaml
+++ b/src/tests/streamcorpus_pipeline/test_post_batch_incremental.yaml
@@ -1,6 +1,6 @@
 ## YAML kba.pipeline config for testing dedup
 
-kba.pipeline:
+streamcorpus_pipeline:
   ## root path for all things that are called *_path in this file and
   ## are not an absolute path, i.e. start with '/'
   root_path: 
