--- a/configs/john-smith-lingpipe.yaml
+++ b/configs/john-smith-lingpipe.yaml
@@ -9,7 +9,7 @@ streamcorpus_pipeline:
   ## pipeline expects strings over stdin, which are typically paths to
   ## streamcorpus.Chunk files.  They can also be some other kind of
   ## opaque byte strings delimited by newlines that your particular
-  ## 'loader' is expecting.
+  ## 'extractor' is expecting.
 
   ## put logs inside each chunk file
   embedded_logs: true
@@ -49,7 +49,7 @@ streamcorpus_pipeline:
 
   lingpipe:
     exit_code_on_out_of_memory: 1
-    pipeline_root_path: ../third/
+    pipeline_root_path: third
     offset_types: [BYTES]
     offset_debugging: false
     cleanup_tmp_files: false
