--- a/configs/john-smith-lingpipe.yaml
+++ b/configs/john-smith-lingpipe.yaml
@@ -45,7 +45,7 @@ streamcorpus_pipeline:
     #output_type: inplace
     output_type: otherdir
     output_path: data/john-smith/
-    output_name: "john-smith-tagged-by-lingpipe-%(first)s"
+    output_name: "john-smith-tagged-by-lingpipe-%(first)s-prebuild"
 
   lingpipe:
     exit_code_on_out_of_memory: 1
