--- a/configs/john-smith-serif-streamcorpus_generate_serifxml.yaml
+++ b/configs/john-smith-serif-streamcorpus_generate_serifxml.yaml
@@ -26,7 +26,7 @@ streamcorpus_pipeline:
 
   serif:
     exit_code_on_out_of_memory: 1
-    pipeline_root_path: third/serif/bin
+    pipeline_root_path: third/serif
     cleanup_tmp_files: true
     tmp_dir_path: tmp
 
