--- a/src/tests/streamcorpus_pipeline/test_align_serif_stage.yaml
+++ b/src/tests/streamcorpus_pipeline/test_align_serif_stage.yaml
@@ -20,19 +20,19 @@ streamcorpus_pipeline:
   ## the main pipeline log_dir_path can trigger similar log chunk
   log_dir_path:  tmp/test-logs
 
-  ## tmp_dir_path, some extractors and loaders require this dir to be in
+  ## tmp_dir_path, some readers and writers require this dir to be in
   ## the same file system as their output.  This is also where the
   ## batch_transforms operate.
   tmp_dir_path: tmp/test-data
 
-  ## task_queue specifies the strings that are passed to an extractor
+  ## task_queue specifies the strings that are passed to an reader
   ## to obtain a Chunk.  The strings might be paths in a file system
   ## or some other source of data.  The task_queue might simply be
   ## stdin, or it might be a more sophisticated shared queue.
   task_queue: stdin
 
   ## generator of StreamItems
-  extractor: from_local_chunks
+  reader: from_local_chunks
 
   ## hyperlink_labels must run after clean_html and before
   ## clean_visible in order for the newlines that it inserted to get
@@ -42,7 +42,7 @@ streamcorpus_pipeline:
   post_batch_incremental_transforms: [align_serif]
 
   ## to_local_chunks must be last, because *moves* the tmp file away
-  loaders: [to_local_chunks]
+  writers: [to_local_chunks]
 
   from_local_chunks:
     max_retries: 30
