--- a/configs/john-smith-serif.yaml
+++ b/configs/john-smith-serif.yaml
@@ -4,11 +4,11 @@ streamcorpus_pipeline:
   output_chunk_max_count: 500
   log_dir_path: tmp
   tmp_dir_path: tmp
-  extractor: john_smith
+  reader: john_smith
 
   incremental_transforms: []
   batch_transforms: [serif]
-  loaders: [to_local_chunks]
+  writers: [to_local_chunks]
 
   to_local_chunks:
     #output_type: inplace
