--- a/configs/john-smith-with-labels-from-tsv.yaml
+++ b/configs/john-smith-with-labels-from-tsv.yaml
@@ -9,7 +9,7 @@ streamcorpus_pipeline:
   ## pipeline expects strings over stdin, which are typically paths to
   ## streamcorpus.Chunk files.  They can also be some other kind of
   ## opaque byte strings delimited by newlines that your particular
-  ## 'loader' is expecting.
+  ## 'writer' is expecting.
 
   ## put logs inside each chunk file
   embedded_logs: true
@@ -21,30 +21,30 @@ streamcorpus_pipeline:
   ## the main pipeline log_dir_path can trigger similar log chunk
   log_dir_path: data/john-smith/
 
-  ## tmp_dir_path, some extractors and loaders require this dir to be in
+  ## tmp_dir_path, some readers and writers require this dir to be in
   ## the same file system as their output.  This is also where the
   ## batch_transforms operate.
   tmp_dir_path: tmp
 
-  ## task_queue specifies the strings that are passed to an extractor
+  ## task_queue specifies the strings that are passed to an reader
   ## to obtain a Chunk.  The strings might be paths in a file system
   ## or some other source of data.  The task_queue might simply be
   ## stdin, or it might be a more sophisticated shared queue.
   task_queue: stdin
   stdin:
 
-  external_stages_path: src/examples/john_smith_custom_extractor.py
+  external_stages_path: src/examples/john_smith_custom_reader.py
 
   ## generator of StreamItems
-  extractor: john_smith_custom_extractor
+  reader: john_smith_custom_extractor
 
   incremental_transforms: []
 
   batch_transforms: []
 
-  loaders: [to_local_chunks]
+  writers: [to_local_chunks]
 
-  john_smith_custom_extractor:
+  john_smith_custom_reader:
     ## illustrate passing a path into a stage, see _john_smith.py comments
     ground_truth_path: data/john-smith/ground-truth.tsv
 
