--- a/configs/john-smith-nltk-from-chunk.yaml
+++ b/configs/john-smith-nltk-from-chunk.yaml
@@ -18,9 +18,11 @@ streamcorpus_pipeline:
   ## generator of StreamItems
   reader: from_local_chunks
 
-  incremental_transforms: []
+  incremental_transforms: [
+    nltk_tokenizer
+  ]
 
-  batch_transforms: [lingpipe]
+  batch_transforms: []
 
   writers: [to_local_chunks]
 
@@ -32,17 +34,4 @@ streamcorpus_pipeline:
     #output_type: inplace
     output_type: otherdir
     output_path: data/john-smith/
-    output_name: "john-smith-tagged-by-lingpipe-test-%(first)s"
-
-  lingpipe:
-    exit_code_on_out_of_memory: 1
-    pipeline_root_path: third
-    offset_types: [BYTES]
-    offset_debugging: false
-    cleanup_tmp_files: false
-
-    align_labels_by: names_in_chains
-    aligner_data:
-      chain_selector: ALL
-      ## identifier of annotator to find in the doc-level Ratings
-      annotator_id: bagga-and-baldwin
+    output_name: "john-smith-tagged-by-nltk-test-%(first)s"
