--- a/streamcorpus_pipeline/tests/test_dedup_chunk_counts.yaml
+++ b/streamcorpus_pipeline/tests/test_dedup_chunk_counts.yaml
@@ -34,7 +34,7 @@ streamcorpus_pipeline:
   ## hyperlink_labels must run after clean_html and before
   ## clean_visible in order for the newlines that it inserted to get
   ## into the clean_visible that lingpipe will operate on.
-  incremental_transforms: [dedup]
+  incremental_transforms: [upgrade_streamcorpus_v0_3_0, dedup]
   batch_transforms: []
 
   ## to_local_chunks must be last, because *moves* the tmp file away
@@ -42,6 +42,7 @@ streamcorpus_pipeline:
 
   from_local_chunks:
     max_retries: 1
+    streamcorpus_version: v0_2_0
 
   to_local_chunks:
     output_type: otherdir
