updating transform for running serif and upgrading KBA colleciton

--- a/configs/streamcorpus-2014-v0_3_0-clean_visible.yaml
+++ b/configs/streamcorpus-2014-v0_3_0-clean_visible.yaml
@@ -1,26 +1,17 @@
 
 streamcorpus_pipeline:
-  root_path: /home/ubuntu 
-
-  embedded_logs: false
-
-  log_level: INFO 
+  root_path: /mnt/kba
+  log_level: DEBUG
 
   output_chunk_max_count: 500
 
   tmp_dir_path:  tmp
+  cleanup_tmp_files: false
 
-  task_queue: registry
-  registry:
-    namespace: streamcorpus-2014-construct
-    registry_addresses: ["redis.diffeo.com:2181"]
-    registry_timeout: 120
-    storage_addresses: ["prod-cassandra-1.diffeo.com:9160"]
-
-  ## generator of StreamItems
   reader: from_s3_chunks
 
   incremental_transforms: [
+    upgrade_streamcorpus_v0_3_0,
     language, 
     guess_media_type, 
     clean_html, 
@@ -28,7 +19,7 @@ streamcorpus_pipeline:
     clean_visible
     ]
 
-  batch_transforms: []
+  batch_transforms: [] #serif]
 
   ## to_local_* must be last, because *moves* the tmp file away
   writers: [to_s3_chunks, to_local_tarballs]
@@ -47,7 +38,7 @@ streamcorpus_pipeline:
     aws_access_key_id_path:     keys/trec-aws-s3.aws_access_key_id
     aws_secret_access_key_path: keys/trec-aws-s3.aws_secret_access_key
     bucket: aws-publicdatasets
-    s3_path_prefix: trec/kba/kba-streamcorpus-2013-v0_3_0-clean_visible
+    s3_path_prefix: trec/kba/kba-streamcorpus-2014-v0_3_0
     output_name: "%(date_hour)s/%(source)s-%(num)d-%(input_md5)s-%(md5)s"
     tries: 10
     gpg_decryption_key_path: keys/trec-kba-rsa.gpg-key.private
@@ -71,3 +62,18 @@ streamcorpus_pipeline:
   to_local_tarballs:
     output_path: /data/trec-kba/data/streamcorpus-2014-v0_3_0-clean_visible-tarballs
     output_name: "%(date_hour)s/%(source)s-%(num)d-%(input_md5)s-%(md5)s"
+
+
+  serif:
+    exit_code_on_out_of_memory: 1
+    pipeline_root_path: /data/trec-kba/third/serif-latest
+    offset_types: [CHARS]
+    offset_debugging: true
+    cleanup_tmp_files: false
+    tmp_dir_path: tmp
+
+    par: streamcorpus_one_step           ## performs tagging and constructs tokens with attrs
+
+    #align_labels_by: char_offset_align_labels
+    #aligner_data:
+    #  annotator_id: author
