Support new labels yaml file format

--- a/data/john-smith/ground-truth.yaml
+++ b/data/john-smith/ground-truth.yaml
@@ -2,12 +2,11 @@ abs_url_base: john-smith-corpus
 source: bagga-and-baldwin
 annotator_id: bagga-and-baldwin
 root_path: original/
-entries:
+entities:
   - target_id: 0
-    profile_path: 
+    doc_path:
       - 0/960114.114
       - 0/960228.375
-    doc_path:
       - 0/960402.459
       - 0/960402.464
       - 0/960513.222
@@ -26,141 +25,141 @@ entries:
       - 0/970711.171
       - 0/970827.638
       - 0/970926.528
-    mentions:
+    slots:
       - John Smith
   - target_id: 1
     doc_path: 1/
-    mentions:
+    slots:
       - John Smith
   - target_id: 2
     doc_path: 2/
-    mentions:
+    slots:
       - John Smith
   - target_id: 3
     doc_path: 3/
-    mentions:
+    slots:
       - John Smith
   - target_id: 4
     doc_path: 4/
-    mentions:
+    slots:
       - John Smith
   - target_id: 5
     doc_path: 5/
-    mentions:
+    slots:
       - John Smith
   - target_id: 6
     doc_path: 6/
-    mentions:
+    slots:
       - John Smith
   - target_id: 7
     doc_path: 7/
-    mentions:
+    slots:
       - John Smith
   - target_id: 8
     doc_path: 8/
-    mentions:
+    slots:
       - John Smith
   - target_id: 9
     doc_path: 9/
-    mentions:
+    slots:
       - John Smith
   - target_id: 10
     doc_path: 10/
-    mentions:
+    slots:
       - John Smith
   - target_id: 11
     doc_path: 11/
-    mentions:
+    slots:
       - John Smith
   - target_id: 12
     doc_path: 12/
-    mentions:
+    slots:
       - John Smith
   - target_id: 13
     doc_path: 13/
-    mentions:
+    slots:
       - John Smith
   - target_id: 14
     doc_path: 14/
-    mentions:
+    slots:
       - John Smith
   - target_id: 15
     doc_path: 15/
-    mentions:
+    slots:
       - John Smith
   - target_id: 16
     doc_path: 16/
-    mentions:
+    slots:
       - John Smith
   - target_id: 17
     doc_path: 17/
-    mentions:
+    slots:
       - John Smith
   - target_id: 18
     doc_path: 18/
-    mentions:
+    slots:
       - John Smith
   - target_id: 19
     doc_path: 19/
-    mentions:
+    slots:
       - John Smith
   - target_id: 20
     doc_path: 20/
-    mentions:
+    slots:
       - John Smith
   - target_id: 21
     doc_path: 21/
-    mentions:
+    slots:
       - John Smith
   - target_id: 22
     doc_path: 22/
-    mentions:
+    slots:
       - John Smith
   - target_id: 23
     doc_path: 23/
-    mentions:
+    slots:
       - John Smith
   - target_id: 24
     doc_path: 24/
-    mentions:
+    slots:
       - John Smith
   - target_id: 25
     doc_path: 25/
-    mentions:
+    slots:
       - John Smith
   - target_id: 26
     doc_path: 26/
-    mentions:
+    slots:
       - John Smith
   - target_id: 27
     doc_path: 27/
-    mentions:
+    slots:
       - John Smith
   - target_id: 28
     doc_path: 28/
-    mentions:
+    slots:
       - John Smith
   - target_id: 29
     doc_path: 29/
-    mentions:
+    slots:
       - John Smith
   - target_id: 30
     doc_path: 30/
-    mentions:
+    slots:
       - John Smith
   - target_id: 31
     doc_path: 31/
-    mentions:
+    slots:
       - John Smith
   - target_id: 32
     doc_path: 32/
-    mentions:
+    slots:
       - John Smith
   - target_id: 33
     doc_path: 33/
-    mentions:
+    slots:
       - John Smith
   - target_id: 34
     doc_path: 34/
-    mentions:
+    slots:
       - John Smith
